Added search for team by ID

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<button id="Display-all-teams">Display all teams</button>
         <button id="Choose-specific-team" >Choose specific team</button>
         <div id="inputDiv">
-			<label for="teamInput">Enter Team:</label>
-			<input type="text" id="team-input">
+			<label for="teamInput">Enter Team ID:</label>
+			<input type="number" id="team-input">
 			<button id="submitBtn">Submit</button>
 		</div>
         <div id="outputDiv"></div>
