--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		<ul>
 			<li><a href="#teams">Teams</a></li>
 			<li><a href="#players">Players</a></li>
-			<li><a href="#games">Games</a></li>
 		</ul>
 	</nav>
 
@@ -22,22 +21,27 @@
 		<button id="Display-all-teams">Display all teams</button>
         <button id="Choose-specific-team" >Choose specific team</button>
         <div id="inputDiv">
-			<label for="teamInput">Enter Team ID:</label>
-			<input type="number" id="team-input">
-			<button id="submitBtn">Submit</button>
+		<form >
+            <label for="fname">Enter Team Id:</label>
+            <input type="text" id="team-input" name="team-input">
+            <input type="submit" id= 'submit-button'>
+        </form>
 		</div>
         <div id="outputDiv"></div>
     </div>
 
 	<div id="players">
 		<h2>Players</h2>
-		<p>Here's some information about basketball players.</p>
-	</div>
-
-	<div id="games">
-		<h2>Games</h2>
-		<p>Here's some information about basketball games.</p>
-	</div>
+        <button id="Display-all-players">Display all players</button>
+        <button id="Choose-specific-player">Choose specific player</button>
+        <div id="player-input-div">
+            <form >
+                <label for="player-input">Enter Player Name : </label>
+                <input type="text" id="player-input" name="player-input">
+                <input type="submit" id="player-submit-button">
+            </form>
+        <div id="outputDiv"></div>
+        </div>
     <script src="js/script.js"></script>
 
 </body>
