--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
 	<div id="teams">
 		<h2>Teams</h2>
-		<button id="Display-all-teams">Display all teams</button>
+		<button id="Display-all-teams">Display all teams</button>&nbsp; &nbsp; &nbsp; &nbsp; 
         <button id="Choose-specific-team" >Choose specific team</button>
+        <br><br>
         <div id="inputDiv">
 		<form >
-            <label for="fname">Enter Team Id:</label>
-            <input type="text" id="team-input" name="team-input">
+            <label for="fname">Enter Team Id</label>
+            <input type="text" id="team-input" name="team-input">&nbsp;&nbsp;&nbsp;
             <input type="submit" id= 'submit-button'>
         </form>
 		</div>
@@ -32,8 +33,9 @@
 
 	<div id="players">
 		<h2>Players</h2>
-        <button id="Display-all-players">Display all players</button>
+        <button id="Display-all-players">Display all players</button>&nbsp; &nbsp; &nbsp; &nbsp; 
         <button id="Choose-specific-player">Choose specific player</button>
+        <br><br>
         <div id="player-input-div">
             <form >
                 <label for="player-input">Enter Player Name : </label>
