--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,44 +8,46 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>The Basketball Directory</title>
 </head>
-<body>
-	<nav>
-		<h1>The Basketball Directory</h1>
-		<ul>
-			<li><a href="#teams">Teams</a></li>
-			<li><a href="#players">Players</a></li>
-		</ul>
-	</nav>
 
-	<div id="teams">
-		<h2>Teams</h2>
-		<button id="Display-all-teams">Display all teams</button>&nbsp; &nbsp; &nbsp; &nbsp; 
-        <button id="Choose-specific-team" >Choose specific team</button>
+<body>
+    <nav>
+        <h1>The Basketball Directory</h1>
+        <ul>
+            <li><a href="#teams">Teams</a></li>
+            <li><a href="#players">Players</a></li>
+        </ul>
+    </nav>
+
+    <div id="teams">
+        <h2>Teams</h2>
+        <button id="Display-all-teams">Display all teams</button>&nbsp; &nbsp; &nbsp; &nbsp;
+        <button id="Choose-specific-team">Choose specific team</button>
         <br><br>
         <div id="inputDiv">
-		<form >
-            <label for="fname">Enter Team Id</label>
-            <input type="text" id="team-input" name="team-input">&nbsp;&nbsp;&nbsp;
-            <input type="submit" id= 'submit-button'>
-        </form>
-		</div>
-        <div id="outputDiv"></div>
+            <form>
+                <label for="fname">Enter Team Id</label>
+                <input type="text" id="team-input" name="team-input">&nbsp;&nbsp;&nbsp;
+                <input type="submit" id='submit-button'>
+            </form>
+        </div>
+        <div id="teams-output-div"></div>
     </div>
 
-	<div id="players">
-		<h2>Players</h2>
-        <button id="Display-all-players">Display all players</button>&nbsp; &nbsp; &nbsp; &nbsp; 
+    <div id="players">
+        <h2>Players</h2>
+        <button id="Display-all-players">Display all players</button>&nbsp; &nbsp; &nbsp; &nbsp;
         <button id="Choose-specific-player">Choose specific player</button>
         <br><br>
         <div id="player-input-div">
-            <form >
+            <form>
                 <label for="player-input">Enter Player Name : </label>
                 <input type="text" id="player-input" name="player-input">
                 <input type="submit" id="player-submit-button">
             </form>
-        <div id="outputDiv"></div>
+            <div id="outputDiv"></div>
         </div>
-    <script src="js/script.js"></script>
+        <script src="js/script.js"></script>
 
 </body>
+
 </html>
